Changed extension for included source file, and made appropriate change in index.html.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript">
 		var editor;
 		$(document).ready(function() {
-			$("#editor").load("ajax.txt", function() {
+			$("#editor").load("ajax.src", function() {
 				editor = ace.edit("editor");
 				editor.setTheme("ace/theme/monokai");
 				editor.getSession().setMode("ace/mode/html");
