--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<title>Ace</title>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript">
 		var editor;
+		var editor2;
+		
 		var global_gist_data;
 		$(document).ready(function() {
 			$("#editor").load("ajax.src", function() {
 				editor = ace.edit("editor");
 				editor.setTheme("ace/theme/monokai");
 				editor.getSession().setMode("ace/mode/javascript");
-			
+				
 				$("#post-gist").click(function() {
 					$.ajax({
 						url: 'https://api.github.com/gists/6942255',
@@ -24,6 +28,26 @@
 						global_gist_data = gistdata;
 					});
 				});
+			});
+			
+			$("#editor2").load("ajax.src", function() {
+				editor2 = ace.edit("editor2");
+				editor2.setTheme("ace/theme/monokai");
+				editor2.getSession().setMode("ace/mode/javascript");
+				/*
+				$("#post-gist").click(function() {
+					$.ajax({
+						url: 'https://api.github.com/gists/6942255',
+						type: 'GET',
+						dataType: 'jsonp'
+					}).success( function(gistdata) {
+						for (file in gistdata.data.files) {
+							editor2.setValue(editor2.getValue() + "\n" + gistdata.data.files[file].content);
+						}
+						global_gist_data = gistdata;
+					});
+				});
+*/			
 			});
 			
 		
@@ -40,15 +64,24 @@
 	width: 500px;
 	height: 500px;
 }
+#editor2 {
+	position: relative;
+	left: 510px;
+	right: 0;
+	width: 500px;
+	height: 500px;
+}
 </style>
 </head>
 
 <body>
 <div id="editor">
 </div>
+<div id="editor2">
+</div>
 <button id="post-gist">Gist it!</button>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js" type="text/javascript" charset="utf-8"></script>
+
 <script>
 
 </script>
