Two separate ace editors, side-by-side.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
 #editor {
 	position: relative;
+	float: left;
 	left: 0;
 	right: 0;
 	width: 500px;
@@ -66,7 +67,8 @@
 }
 #editor2 {
 	position: relative;
-	left: 510px;
+	float: left;
+
 	right: 0;
 	width: 500px;
 	height: 500px;
