Moved 'tab' buttons to the top.

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 </head>
 
 <body>
-<div id="editor">
-</div>
-<div id="editor2">
-</div>
 <div id="tabs">
-<button id="btn1">1</button>
-<button id="btn2">2</button>
+	<button id="btn1">1</button>
+	<button id="btn2">2</button>
 </div>
+
+<div id="editor"></div>
+<div id="editor2"></div>
+
 <button id="post-gist">Gist it!</button>
 
 
